# persistent-extremes-era5

./: .gitignore  Experiment.py  MCA.ipynb  OPP_tests.ipynb  README.md  SOM.ipynb  SOM_basics.ipynb  SOM_composites.ipynb  SOM_hotspells.ipynb  SOM_intransivity.ipynb  clustering.ipynb  clustering.py  compare_ERA5.ipynb  create_datasets.ipynb  data.py  data_stuff.ipynb  definitions.py  desom_tests.ipynb  download_ERA5.ipynb  download_ERA5.py  download_ERA5.sbatch  download_ERA5_.py  download_prec.py  dry_extreme_prediction.ipynb  dynamical_index.ipynb  dynlib_tests.ipynb  enso.csv  fetch_t2m.py  fetch_ulow.py  future_jets.ipynb  future_persistent_spells.ipynb  future_som.ipynb  heat_wave_prediction.ipynb  hihi.csv  hotspells.csv  hotspells.py  hotspells_v2.csv  import_cesm2.ipynb  index_extreme_prediction.ipynb  jet_finding.py  (+36 more)
Obsolete/: dbgsom_tests.ipynb  desom_tests.ipynb  future_persistent_spells.ipynb  future_som.ipynb  old_intransivity.ipynb  persistent_spells.ipynb  som_z500.ipynb  twostep_intransivity.ipynb
Paper1+extras/: SOM_basics.ipynb  future_jets.ipynb  jet_index_basics.ipynb  jet_tracking.ipynb
Persistence/: persistent_jets_cesm.ipynb  persistent_jets_tropo.ipynb  persistent_jets_v2.ipynb  persistent_spells.ipynb  som_pers_cesm.ipynb
Playgrounds/: data_henrik_pg.ipynb  data_stuff.ipynb  download_s2s.ipynb  hilla.ipynb  s2s.ipynb
Predictions/: SOM_hotspells.ipynb  dry_extreme_prediction.ipynb  heat_wave_prediction.ipynb  wet_extreme_prediction.ipynb
scripts/: all_jets.py  all_jets.sbatch  all_jets_cesm.py  all_jets_cesm.sbatch  cesm_jets.py  cesm_jets.sbatch  copy_files.py  copy_files.sbatch  daymean.sbatch  daymean.sh  daysum.sbatch  daysum.sh  do_exp10.py  do_exp10.sbatch  do_exp9.py  do_exp9.sbatch  do_exp_8.py  do_exp_8.sbatch  download_ERA5.py  download_ERA5.sbatch  download_ERA5_mars.py  download_prec.sbatch  download_s2s.py  future_jets.py  future_jets.sbatch  future_som.py  future_som.sbatch  henrik_jets.py  henrik_jets.sbatch  interpolate_2PVU.py  interpolate_2PVU.sbatch  merge_high.sbatch  merge_high.sh  nh_jets.py  nh_jets.sbatch  postprocess.sbatch  postprocess.sh  pvs_to_da.py  pvs_to_da.sbatch  test_new_jets.py  (+1 more)
snippets/: CVAE.py  EDG.py  Experiments.py  LDT.py  MCA.py  Opp_v_hotspell.py  double_anim.py  extended_seismic.py  find_jets_dask.py  find_jets_v1_v2_v3.py  hotspells_duncan.py  jet_props_hotspells_old.ipynb  loo_lr.py  lr_terciles.py  (+5 more)
(+32 files in other folders)
