[project]
name = "persistent-extremes-era5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "cf-xarray>=0.10.5",
    "dask>=2025.4.0",
    "distributed>=2025.4.0",
    "matplotlib>=3.10.1",
    "numba>=0.61.2",
    "numpy>=2.2.5",
    "polars>=1.27.1",
    "polars-ds>=0.8.3",
    "polars-ols>=0.3.5",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "tqdm>=4.67.1",
    "xarray>=2025.3.1",
    "xgboost>=3.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
