[project]
name = "persistent-extremes-era5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.24.1",
    "jupyter>=1.1.1",
    "netcdf4>=1.7.2",
    "numpy>=2.2.5",
    "polars>=1.29.0",
    "polars-ds>=0.8.3",
    "shap>=0.47.2",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
    "xgboost>=3.0.1",
]
